grain form post working
- Does not yet have validation - grain amount as a string will break
- Adds grains one at a time with seperate post

--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,7 @@
         <script type="text/javascript" src="./js/factories/Session.js"></script>
         <script type="text/javascript" src="./js/factories/User.js"></script>
         <script type="text/javascript" src="./js/factories/Recipe.js"></script>
+        <script type="text/javascript" src="./js/factories/Grain.js"></script>
         <script type="text/javascript" src="./js/services/AuthService.js"></script>
         <script type="text/javascript" src="./js/directives/match.js"></script>
 
