--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,7 @@
         <script type="text/javascript" src="./js/controllers/SessionDestroyCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/UserCreateCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/RecipeCreateCtrl.js"></script>
+        <script type="text/javascript" src="./js/controllers/RecipeEditCtrl.js"></script>
         <script type="text/javascript" src="./js/factories/Session.js"></script>
         <script type="text/javascript" src="./js/factories/User.js"></script>
         <script type="text/javascript" src="./js/factories/Recipe.js"></script>
