--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@
         <script type="text/javascript" src="./js/factories/User.js"></script>
         <script type="text/javascript" src="./js/factories/Recipe.js"></script>
         <script type="text/javascript" src="./js/factories/Grain.js"></script>
+        <script type="text/javascript" src="./js/factories/Addition.js"></script>
         <script type="text/javascript" src="./js/services/AuthService.js"></script>
         <script type="text/javascript" src="./js/directives/match.js"></script>
 
