--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,7 @@
         <script type="text/javascript" src="./js/controllers/SessionDestroyCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/UserCreateCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/RecipeCtrl.js"></script>
+        <script type="text/javascript" src="./js/controllers/RecipeListCtrl.js"></script>
         <script type="text/javascript" src="./js/factories/Session.js"></script>
         <script type="text/javascript" src="./js/factories/User.js"></script>
         <script type="text/javascript" src="./js/factories/Recipe.js"></script>
