add recipe view controller

--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,7 @@
         <script type="text/javascript" src="./js/controllers/UserCreateCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/RecipeCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/RecipeListCtrl.js"></script>
+        <script type="text/javascript" src="./js/controllers/RecipeViewCtrl.js"></script>
         <script type="text/javascript" src="./js/factories/Session.js"></script>
         <script type="text/javascript" src="./js/factories/User.js"></script>
         <script type="text/javascript" src="./js/factories/Recipe.js"></script>
