--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
                     <a class="brewday-nav-item" ui-sref="login" ng-hide="isLoggedIn" ng-class="{active: isActive('/sessions/create')}">Login</a>
                     <a class="brewday-nav-item" ui-sref="logout" ng-show="isLoggedIn">Logout</a>
                     <a class="brewday-nav-item" ui-sref="register" ng-class="{active: isActive('/users/create')}">Register</a>
-                    <a class="brewday-nav-item" ui-sref="create" ng-show="isLoggedIn" ng-class="{active: isActive('/recipes/create')}">Create a recipe</a>
+                    <a class="brewday-nav-item" ui-sref="recipes.create" ng-show="isLoggedIn" ng-class="{active: isActive('/recipes/create')}">Create a recipe</a>
                 </nav>
             </div>
         </div>
@@ -42,6 +42,7 @@
         <script type="text/javascript" src="./js/controllers/SessionDestroyCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/UserCreateCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/RecipeCtrl.js"></script>
+        <script type="text/javascript" src="./js/controllers/RecipeCreateCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/RecipeListCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/RecipeViewCtrl.js"></script>
         <script type="text/javascript" src="./js/factories/Session.js"></script>
