move water volume calculations to a service

--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,7 @@
         <script type="text/javascript" src="./js/factories/Hop.js"></script>
         <script type="text/javascript" src="./js/factories/Addition.js"></script>
         <script type="text/javascript" src="./js/services/AuthService.js"></script>
+        <script type="text/javascript" src="./js/services/WaterService.js"></script>
         <script type="text/javascript" src="./js/directives/match.js"></script>
 
     </body>
