--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
                     <a class="brewday-nav-item" ui-sref="login" ng-hide="isLoggedIn" ng-class="{active: isActive('/sessions/create')}">Login</a>
                     <a class="brewday-nav-item" ui-sref="logout" ng-show="isLoggedIn">Logout</a>
                     <a class="brewday-nav-item" ui-sref="register" ng-class="{active: isActive('/users/create')}">Register</a>
-                    <a class="brewday-nav-item" ui-sref="recipes.create" ng-show="isLoggedIn" ng-class="{active: isActive('/recipes/create')}">Create a recipe</a>
+                    <a class="brewday-nav-item" ui-sref="create" ng-show="isLoggedIn" ng-class="{active: isActive('/recipes/create')}">Create a recipe</a>
                 </nav>
             </div>
         </div>
