--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="Brewday" ng-controller="ApplicationCtrl">
+<html ng-app="Brewday">
     <head>
         <meta charset="utf-8" />
         <title>Brewday</title>
@@ -13,10 +13,10 @@
                 <nav class="brewday-nav">
                     <a class="brewday-nav-item" ui-sref="home" ng-class="{active: isActive('/')}">Home</a>
                     <a class="brewday-nav-item" href="#/recipes" ng-class="{active: isActive('/')}">Recipes</a>
-                    <a class="brewday-nav-item" ui-sref="login" ng-hide="isLoggedIn" ng-class="{active: isActive('/sessions/create')}">Login</a>
-                    <a class="brewday-nav-item" ui-sref="logout" ng-show="isLoggedIn">Logout</a>
+                    <a class="brewday-nav-item" ui-sref="login" ng-hide="$stateParams.isLoggedIn" ng-class="{active: isActive('/sessions/create')}">Login</a>
+                    <a class="brewday-nav-item" ui-sref="logout" ng-show="$stateParams.isLoggedIn">Logout</a>
                     <a class="brewday-nav-item" ui-sref="register" ng-class="{active: isActive('/users/create')}">Register</a>
-                    <a class="brewday-nav-item" ui-sref="recipes.create" ng-show="isLoggedIn" ng-class="{active: isActive('/recipes/create')}">Create a recipe</a>
+                    <a class="brewday-nav-item" ui-sref="recipes.create" ng-show="$stateParams.isLoggedIn" ng-class="{active: isActive('/recipes/create')}">Create a recipe</a>
                 </nav>
             </div>
         </div>
@@ -36,7 +36,6 @@
         <script type="text/javascript" src="./bower_components/angular-local-storage/angular-local-storage.js"></script>
         <script type="text/javascript" src="./js/main.js"></script>
         <script type="text/javascript" src="./js/controllers/HomeDetailCtrl.js"></script>
-        <script type="text/javascript" src="./js/controllers/ApplicationCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/SessionCreateCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/SessionDestroyCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/UserCreateCtrl.js"></script>
