--- a/client/index.html
+++ b/client/index.html
@@ -53,6 +53,7 @@
         <script type="text/javascript" src="./js/services/WaterService.js"></script>
         <script type="text/javascript" src="./js/services/FormService.js"></script>
         <script type="text/javascript" src="./js/directives/match.js"></script>
+        <script type="text/javascript" src="./js/directives/recipeDirective.js"></script>
 
     </body>
 </html>
