--- a/client/index.html
+++ b/client/index.html
@@ -34,15 +34,17 @@
         <script type="text/javascript" src="./bower_components/lodash/dist/lodash.js"></script>
         <script type="text/javascript" src="./bower_components/restangular/dist/restangular.js"></script>
         <script type="text/javascript" src="./bower_components/angular-local-storage/angular-local-storage.js"></script>
-        <script type="text/javascript" src="./js/main.js"></script>
         <script type="text/javascript" src="./js/controllers/HomeDetailCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/SessionCreateCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/SessionDestroyCtrl.js"></script>
         <script type="text/javascript" src="./js/controllers/UserCreateCtrl.js"></script>
-        <script type="text/javascript" src="./js/controllers/RecipeCtrl.js"></script>
-        <script type="text/javascript" src="./js/controllers/RecipeCreateCtrl.js"></script>
-        <script type="text/javascript" src="./js/controllers/RecipeListCtrl.js"></script>
-        <script type="text/javascript" src="./js/controllers/RecipeViewCtrl.js"></script>
+
+        <script type="text/javascript" src="./app/brewday-app.js"></script>
+        <script type="text/javascript" src="./app/recipes/RecipeListCtrl.js"></script>
+        <script type="text/javascript" src="./app/recipes/recipe/RecipeViewCtrl.js"></script>
+        <script type="text/javascript" src="./app/recipes/recipe/edit/RecipeCtrl.js"></script>
+        <script type="text/javascript" src="./app/recipes/recipe/create/RecipeCreateCtrl.js"></script>
+
         <script type="text/javascript" src="./js/factories/Session.js"></script>
         <script type="text/javascript" src="./js/factories/User.js"></script>
         <script type="text/javascript" src="./js/factories/Recipe.js"></script>
