view and edit implemented

--- a/client/index.html
+++ b/client/index.html
@@ -41,9 +41,11 @@
 
         <script type="text/javascript" src="./app/brewday-app.js"></script>
         <script type="text/javascript" src="./app/recipes/RecipeListCtrl.js"></script>
-        <script type="text/javascript" src="./app/recipes/recipe/RecipeViewCtrl.js"></script>
-        <script type="text/javascript" src="./app/recipes/recipe/edit/RecipeCtrl.js"></script>
-        <script type="text/javascript" src="./app/recipes/recipe/create/RecipeCreateCtrl.js"></script>
+        <script type="text/javascript" src="./app/recipes/RecipeViewCtrl.js"></script>
+        <script type="text/javascript" src="./app/recipes/edit/RecipeCtrl.js"></script>
+        <script type="text/javascript" src="./app/recipes/create/RecipeCreateCtrl.js"></script>
+        <script type="text/javascript" src="./app/recipes/grains/grains.js"></script>
+        <script type="text/javascript" src="./app/recipes/hops/hops.js"></script>
 
         <script type="text/javascript" src="./js/factories/Session.js"></script>
         <script type="text/javascript" src="./js/factories/User.js"></script>
