move sessions, users, water volume

--- a/client/index.html
+++ b/client/index.html
@@ -34,18 +34,18 @@
         <script type="text/javascript" src="./bower_components/lodash/dist/lodash.js"></script>
         <script type="text/javascript" src="./bower_components/restangular/dist/restangular.js"></script>
         <script type="text/javascript" src="./bower_components/angular-local-storage/angular-local-storage.js"></script>
-        <script type="text/javascript" src="./js/controllers/HomeDetailCtrl.js"></script>
-        <script type="text/javascript" src="./js/controllers/SessionCreateCtrl.js"></script>
-        <script type="text/javascript" src="./js/controllers/SessionDestroyCtrl.js"></script>
-        <script type="text/javascript" src="./js/controllers/UserCreateCtrl.js"></script>
 
         <script type="text/javascript" src="./app/brewday-app.js"></script>
-        <script type="text/javascript" src="./app/recipes/RecipeListCtrl.js"></script>
-        <script type="text/javascript" src="./app/recipes/RecipeViewCtrl.js"></script>
+        <script type="text/javascript" src="./app/sessions/SessionCreateCtrl.js"></script>
+        <script type="text/javascript" src="./app/sessions/SessionDestroyCtrl.js"></script>
+        <script type="text/javascript" src="./app/users/UserCreateCtrl.js"></script>
+        <script type="text/javascript" src="./app/recipes/recipes.js"></script>
+        <script type="text/javascript" src="./app/recipes/view/view.js"></script>
         <script type="text/javascript" src="./app/recipes/edit/RecipeCtrl.js"></script>
         <script type="text/javascript" src="./app/recipes/create/RecipeCreateCtrl.js"></script>
         <script type="text/javascript" src="./app/recipes/grains/grains.js"></script>
         <script type="text/javascript" src="./app/recipes/hops/hops.js"></script>
+        <script type="text/javascript" src="./app/recipes/calculator/calculator.js"></script>
 
         <script type="text/javascript" src="./js/factories/Session.js"></script>
         <script type="text/javascript" src="./js/factories/User.js"></script>
@@ -54,10 +54,8 @@
         <script type="text/javascript" src="./js/factories/Hop.js"></script>
         <script type="text/javascript" src="./js/factories/Addition.js"></script>
         <script type="text/javascript" src="./js/services/AuthService.js"></script>
-        <script type="text/javascript" src="./js/services/WaterService.js"></script>
         <script type="text/javascript" src="./js/services/FormService.js"></script>
         <script type="text/javascript" src="./js/directives/match.js"></script>
-        <script type="text/javascript" src="./js/directives/recipeDirective.js"></script>
 
     </body>
 </html>
