--- a/client/index.html
+++ b/client/index.html
@@ -47,12 +47,12 @@
         <script type="text/javascript" src="./app/recipes/hops/hops.js"></script>
         <script type="text/javascript" src="./app/recipes/calculator/calculator.js"></script>
 
-        <script type="text/javascript" src="./js/factories/Session.js"></script>
-        <script type="text/javascript" src="./js/factories/User.js"></script>
-        <script type="text/javascript" src="./js/factories/Recipe.js"></script>
-        <script type="text/javascript" src="./js/factories/Grain.js"></script>
-        <script type="text/javascript" src="./js/factories/Hop.js"></script>
-        <script type="text/javascript" src="./js/factories/Addition.js"></script>
+        <script type="text/javascript" src="./app/common/models/Session.js"></script>
+        <script type="text/javascript" src="./app/common/models/User.js"></script>
+        <script type="text/javascript" src="./app/common/models/Recipe.js"></script>
+        <script type="text/javascript" src="./app/common/models/Grain.js"></script>
+        <script type="text/javascript" src="./app/common/models/Hop.js"></script>
+        <script type="text/javascript" src="./app/common/models/Addition.js"></script>
         <script type="text/javascript" src="./js/services/AuthService.js"></script>
         <script type="text/javascript" src="./js/services/FormService.js"></script>
         <script type="text/javascript" src="./js/directives/match.js"></script>
