delete the js folder
- move the service and directives into their new locations

--- a/client/index.html
+++ b/client/index.html
@@ -36,8 +36,7 @@
         <script type="text/javascript" src="./bower_components/angular-local-storage/angular-local-storage.js"></script>
 
         <script type="text/javascript" src="./app/brewday-app.js"></script>
-        <script type="text/javascript" src="./app/sessions/SessionCreateCtrl.js"></script>
-        <script type="text/javascript" src="./app/sessions/SessionDestroyCtrl.js"></script>
+        <script type="text/javascript" src="./app/sessions/sessions.js"></script>
         <script type="text/javascript" src="./app/users/UserCreateCtrl.js"></script>
         <script type="text/javascript" src="./app/recipes/recipes.js"></script>
         <script type="text/javascript" src="./app/recipes/view/view.js"></script>
@@ -53,9 +52,6 @@
         <script type="text/javascript" src="./app/common/models/Grain.js"></script>
         <script type="text/javascript" src="./app/common/models/Hop.js"></script>
         <script type="text/javascript" src="./app/common/models/Addition.js"></script>
-        <script type="text/javascript" src="./js/services/AuthService.js"></script>
-        <script type="text/javascript" src="./js/services/FormService.js"></script>
-        <script type="text/javascript" src="./js/directives/match.js"></script>
 
     </body>
 </html>
