rename js files

--- a/client/index.html
+++ b/client/index.html
@@ -37,11 +37,11 @@
 
         <script type="text/javascript" src="./app/brewday-app.js"></script>
         <script type="text/javascript" src="./app/sessions/sessions.js"></script>
-        <script type="text/javascript" src="./app/users/UserCreateCtrl.js"></script>
+        <script type="text/javascript" src="./app/users/users.js"></script>
         <script type="text/javascript" src="./app/recipes/recipes.js"></script>
-        <script type="text/javascript" src="./app/recipes/view/view.js"></script>
-        <script type="text/javascript" src="./app/recipes/edit/RecipeCtrl.js"></script>
-        <script type="text/javascript" src="./app/recipes/create/RecipeCreateCtrl.js"></script>
+        <script type="text/javascript" src="./app/recipes/view/recipe-view.js"></script>
+        <script type="text/javascript" src="./app/recipes/edit/recipe-edit.js"></script>
+        <script type="text/javascript" src="./app/recipes/create/recipe-create.js"></script>
         <script type="text/javascript" src="./app/recipes/grains/grains.js"></script>
         <script type="text/javascript" src="./app/recipes/hops/hops.js"></script>
         <script type="text/javascript" src="./app/recipes/calculator/calculator.js"></script>
