--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
         <script type="text/javascript" src="./bower_components/angular-local-storage/angular-local-storage.js"></script>
 
         <script type="text/javascript" src="./app/brewday-app.js"></script>
-        <script type="text/javascript" src="./app/sessions/sessions.js"></script>
+        <script type="text/javascript" src="./app/session/session.js"></script>
         <script type="text/javascript" src="./app/users/users.js"></script>
         <script type="text/javascript" src="./app/recipes/recipes.js"></script>
         <script type="text/javascript" src="./app/recipes/view/recipe-view.js"></script>
@@ -51,7 +51,6 @@
         <script type="text/javascript" src="./app/common/models/recipe-model.js"></script>
         <script type="text/javascript" src="./app/common/models/grain-model.js"></script>
         <script type="text/javascript" src="./app/common/models/hop-model.js"></script>
-        <script type="text/javascript" src="./app/common/models/addition-model.js"></script>
 
     </body>
 </html>
