--- a/client/app/recipes/list.html
+++ b/client/app/recipes/list.html
@@ -1,4 +1,4 @@
-<div ng-repeat="recipe in recipes" class="brewday-post">
+<div ng-repeat="recipe in recipes.recipes" class="brewday-post">
     <a id="recipe-{{recipe.id}}" ui-sref="recipes.view({recipe_id: recipe.id})">
         <p class="brewday-post-title">{{recipe.beer_type}} - {{recipe.name}}</p>
     </a>
