--- a/client/app/recipes/create/form.html
+++ b/client/app/recipes/create/form.html
@@ -15,7 +15,7 @@
     </div>
     <hr />
     <grain-list-form grains="recipes.grains" to-delete="recipes.toDelete"></grain-list-form>
-    <hop-list-form hops="recipes.hops" to-delete="recipes.toDelete"></hop-list-form>
+    <hop-list-form additions="recipes.hops" to-delete="recipes.toDelete" addition-type="Hop"></hop-list-form>
 
     <div class="col-md-12">
         <hr style="padding-bottom: 40px"/>
