--- a/client/app/recipes/edit/form.html
+++ b/client/app/recipes/edit/form.html
@@ -14,9 +14,7 @@
         </div>
     </div>
     <hr />
-    <grain-list-form additions="recipes.grains" to-delete="recipes.toDelete" addition-type="Grain"></grain-list-form>
-    <hop-list-form additions="recipes.hops" to-delete="recipes.toDelete" addition-type="Hop"></hop-list-form>
-
+    <additions-form additions="recipes.additions" to-delete="recipes.toDelete"></additions-form>
     <div class="col-md-12">
         <hr style="padding-bottom: 40px"/>
         <button type="submit" ng-show="!readOnly" class="btn btn-success pull-right">Save Recipe</button>
