--- a/client/index.html
+++ b/client/index.html
@@ -52,6 +52,7 @@
         <script type="text/javascript" src="./app/common/models/recipe-model.js"></script>
         <script type="text/javascript" src="./app/common/models/grain-model.js"></script>
         <script type="text/javascript" src="./app/common/models/hop-model.js"></script>
+        <script type="text/javascript" src="./app/common/models/addition-model.js"></script>
 
     </body>
 </html>
