--- a/client/app/recipes/create/form.html
+++ b/client/app/recipes/create/form.html
@@ -15,7 +15,7 @@
     </div>
     <hr />
 
-    <additions-form additions="recipes.additions" to-delete="[]"></additions-form>
+    <additions-form additions="recipes.additions" to-delete="[]" recipe="{}"></additions-form>
     <div class="col-md-12">
         <hr style="padding-bottom: 40px"/>
         <button type="submit" ng-show="!readOnly" class="btn btn-success pull-right">Save Recipe</button>
