--- a/client/app/recipes/edit/form.html
+++ b/client/app/recipes/edit/form.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <hr />
-    <additions-form additions="recipes.additions" to-delete="recipes.toDelete"></additions-form>
+    <additions-form additions="recipes.additions" to-delete="recipes.toDelete" recipe="recipes.recipe"></additions-form>
     <div class="col-md-12">
         <hr style="padding-bottom: 40px"/>
         <button type="submit" ng-show="!readOnly" class="btn btn-success pull-right">Save Recipe</button>
