--- a/client/app/session/create.html
+++ b/client/app/session/create.html
@@ -1,5 +1,5 @@
 <h1>Login</h1>
-<form class="form-horizontal" name="loginForm" ng-submit="login(data.email, data.password)" novalidate>
+<form class="form-horizontal" name="loginForm" ng-submit="session.login(data.email, data.password)" novalidate>
     <div class="form-group">
         <label class="col-sm-4 control-label">Email</label>
         <div class="col-sm-4">
