--- a/client/app/recipes/list.html
+++ b/client/app/recipes/list.html
@@ -1,4 +1,5 @@
-<div ng-repeat="recipe in recipes.recipes" class="brewday-post">
+<input type="text" class="form-control" id="filter" ng-model="filter.name" placeholder="Search"/>
+<div ng-repeat="recipe in recipes.recipes | filter: filter" class="brewday-post">
     <a id="recipe-{{recipe.id}}" ui-sref="recipes.view({recipe_id: recipe.id})">
         <p class="brewday-post-title">{{recipe.beer_type}} - {{recipe.name}}</p>
     </a>
