--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,8 @@
         <script type="text/javascript" src="./bower_components/lodash/dist/lodash.js"></script>
         <script type="text/javascript" src="./bower_components/restangular/dist/restangular.js"></script>
         <script type="text/javascript" src="./bower_components/angular-local-storage/angular-local-storage.js"></script>
-
+        <script type="text/javascript" src="./bower_components/angular-ui-select/dist/select.js"></script>
+        <script type="text/javascript" src="./bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script type="text/javascript" src="./app/brewday-app.js"></script>
         <script type="text/javascript" src="./app/session/session.js"></script>
         <script type="text/javascript" src="./app/session/auth-service.js"></script>
