add equipment settings controllers and tests

--- a/client/index.html
+++ b/client/index.html
@@ -46,12 +46,15 @@
         <script type="text/javascript" src="./app/recipes/create/recipe-create.js"></script>
         <script type="text/javascript" src="./app/recipes/additions/additions.js"></script>
         <script type="text/javascript" src="./app/recipes/calculator/calculator.js"></script>
+        <script type="text/javascript" src="./app/settings/settings.js"></script>
+        <script type="text/javascript" src="./app/settings/equipment/equipment-profile.js"></script>
 
         <script type="text/javascript" src="./app/common/models/session-model.js"></script>
         <script type="text/javascript" src="./app/common/models/user-model.js"></script>
         <script type="text/javascript" src="./app/common/models/recipe-model.js"></script>
         <script type="text/javascript" src="./app/common/models/grain-model.js"></script>
         <script type="text/javascript" src="./app/common/models/hop-model.js"></script>
+        <script type="text/javascript" src="./app/common/models/equipment-model.js"></script>
     </body>
 </html>
 
