--- a/client/app/recipes/create/form.html
+++ b/client/app/recipes/create/form.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" name="postForm" ng-submit="recipes.submit_recipe(recipes.recipe.name, recipes.recipe.beer_type, recipes.grains, recipes.hops)" novalidate>
+<form class="form-horizontal" name="postForm" ng-submit="recipes.submit_recipe(recipes.recipe.name, recipes.recipe.beer_type, recipes.grains, recipes.hops, recipes.equipment_id)" novalidate>
     <div class="form-group">
         <div class="row">
             <label class="col-md-1 control-label">Name</label>
@@ -10,6 +10,17 @@
             <div class="col-md-4">
                 <input type="text" class="form-control" ng-disabled="{{readOnly}}" name="beertype" placeholder="IPA" ng-model="recipes.recipe.beer_type" required>
                 <p ng-show="postForm.beer_type.$invalid && !postForm.beer_type.$pristine" class="help-block">Beer Type is required</p>
+            </div>
+        </div>
+        <div class="row">
+            <label class="col-md-1 control-label">Equipment Profile</label>
+            <div class="col-md-4">
+                <ui-select ng-model="recipes.equipment_id" theme="selectize" ng-disabled="disabled">
+                <ui-select-match placeholder="Select or search a profile in the list...">{{$select.selected.name}}</ui-select-match>
+                <ui-select-choices repeat="equipment.id as equipment in recipes.equipmentList | filter: {name: $select.search}">
+                <span ng-bind-html="equipment.name | highlight: $select.search"></span>
+                </ui-select-choices>
+                </ui-select>
             </div>
         </div>
     </div>
