create directive for equipment select
resolves #1

--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,7 @@
         <script type="text/javascript" src="./app/recipes/create/recipe-create.js"></script>
         <script type="text/javascript" src="./app/recipes/additions/additions.js"></script>
         <script type="text/javascript" src="./app/recipes/calculator/calculator.js"></script>
+        <script type="text/javascript" src="./app/recipes/equipment/recipe-equipment.js"></script>
         <script type="text/javascript" src="./app/settings/settings.js"></script>
         <script type="text/javascript" src="./app/settings/equipment/equipment-profile.js"></script>
 
