use equipment profile object instead of id
- id will only be stored in the database
- the equipment profile will be returned from the database as part of
  the recipe and will be used in the select

--- a/client/app/recipes/recipe-form-tmpl.html
+++ b/client/app/recipes/recipe-form-tmpl.html
@@ -12,7 +12,7 @@
                 <p ng-show="postForm.beer_type.$invalid && !postForm.beer_type.$pristine" class="help-block">Beer Type is required</p>
             </div>
         </div>
-        <equipment-select equipment-id="recipes.recipe.equipment_id"></equipment-select>
+        <equipment-select profile="recipes.recipe.equipment_profile"></equipment-select>
     </div>
     <hr />
     <additions-form additions="recipes.additions" to-delete="recipes.toDelete" recipe="recipes.recipe"></additions-form>
