--- a/client/app/recipes/create/create.html
+++ b/client/app/recipes/create/create.html
@@ -1,3 +1,3 @@
 <h1>Create Recipe</h1>
 <ng-include src="'app/recipes/recipe-form-tmpl.html'"></ng-include>
-<water-calculations grains="recipes.grains"></water-calculations>
+<water-calculations grains="recipes.additions.grains"></water-calculations>
