--- a/client/app/recipes/recipe-form-tmpl.html
+++ b/client/app/recipes/recipe-form-tmpl.html
@@ -13,6 +13,7 @@
             </div>
         </div>
         <equipment-select profile="recipes.recipe.equipment_profile"></equipment-select>
+        <recipe-details recipe="recipes.recipe"></recipe-details>
     </div>
     <hr />
     <additions-form additions="recipes.additions" to-delete="recipes.toDelete" recipe="recipes.recipe"></additions-form>
