--- a/client/app/recipes/equipment/equipment-select-tmpl.html
+++ b/client/app/recipes/equipment/equipment-select-tmpl.html
@@ -1,4 +1,4 @@
-<ng-form name="grainForm" ng-model="equipmentCtrl.equipmentId">
+<ng-form name="grainForm" ng-model="equipmentCtrl.Calculator.equipmentProfile">
 <div class="row">
     <label class="col-md-1 control-label">Equipment Profile</label>
     <div class="col-md-4">
