--- a/client/app/settings/equipment/equipment-view.tmpl.html
+++ b/client/app/settings/equipment/equipment-view.tmpl.html
@@ -1,4 +1,7 @@
 <form class="form-horizontal" name="equipmentForm" ng-submit="equipmentView.profile.createProfile(equipmentView.profile.name, equipmentView.profile.trubLoss, equipmentView.profile.equipmentLoss, equipmentView.profile.fermenterLoss)" novalidate>
+    <div class="col-md-12">
+        <button type="button" class="btn btn-danger" ng-click="equipmentView.delete(recipes.recipe)">Delete</button>
+    </div>
     <div class="form-group">
         <label class="col-md-2 control-label">Name</label>
         <div class="col-md-4">
@@ -7,17 +10,17 @@
         </div>
         <label class="col-md-2 control-label">Trub Loss</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" ng-disabled="{{equipmentView.readOnly}}" name="trubLoss" placeholder="lbs" ng-model="equipmentView.profile.trub_loss" required>
+            <input type="text" class="form-control" ng-disabled="{{equipmentView.readOnly}}" name="trubLoss" placeholder="lbs" ng-model="equipmentView.profile.trubLoss" required>
             <p ng-show="equipmentView.profile.$invalid && !equipmentView.profile.trubLoss.$pristine" class="help-block">Beer Type is required</p>
         </div>
         <label class="col-md-2 control-label">Equipment Loss</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" ng-disabled="{{equipmentView.readOnly}}" name="equipmentLoss" placeholder="lbs" ng-model="equipmentView.profile.equipment_loss" required>
+            <input type="text" class="form-control" ng-disabled="{{equipmentView.readOnly}}" name="equipmentLoss" placeholder="lbs" ng-model="equipmentView.profile.equipmentLoss" required>
             <p ng-show="equipmentView.profile.$invalid && !equipmentView.profile.equipmentLoss.$pristine" class="help-block">Equipment Loss is required</p>
         </div>
         <label class="col-md-2 control-label">Fermenter Loss</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" ng-disabled="{{equipmentView.readOnly}}" name="fermenterLoss" placeholder="lbs" ng-model="equipmentView.profile.fermenter_loss" required>
+            <input type="text" class="form-control" ng-disabled="{{equipmentView.readOnly}}" name="fermenterLoss" placeholder="lbs" ng-model="equipmentView.profile.fermenterLoss" required>
             <p ng-show="equipmentView.profile.$invalid && !equipmentView.profile.fermenterLoss.$pristine" class="help-block">Fermenter Loss is required</p>
         </div>
     </div>
