--- a/client/app/settings/equipment/equipment-form.html
+++ b/client/app/settings/equipment/equipment-form.html
@@ -1,31 +1,31 @@
-<form class="form-horizontal" name="equipmentForm" ng-submit="equipmentCreate.createProfile(equipmentCreate.name, equipmentCreate.trubLoss, equipmentCreate.equipmentLoss, equipmentCreate.fermenterLoss)" novalidate>
+<form class="form-horizontal" name="equipmentForm" ng-submit="equipment.createProfile(equipment.profile.name, equipment.profile.trubLoss, equipment.profile.equipmentLoss, equipment.profile.fermenterLoss)" novalidate>
     <div class="form-group">
         <div class="row">
             <label class="col-md-1 control-label">Name</label>
             <div class="col-md-4">
-                <input type="text" class="form-control" ng-disabled="{{readOnly}}" name="name" placeholder="Profile Name" ng-model="equipmentCreate.name" required>
-                <p ng-show="equipmentCreate.name.$invalid && !equipmentCreate.name.$pristine" class="help-block">Profile Name Required.</p>
+                <input type="text" class="form-control" ng-disabled="{{readOnly}}" name="name" placeholder="Profile Name" ng-model="equipment.profile.name" required>
+                <p ng-show="equipment.profile.name.$invalid && !equipment.profile.name.$pristine" class="help-block">Profile Name Required.</p>
             </div>
             <label class="col-md-2 control-label">Trub Loss</label>
             <div class="col-md-4">
-                <input type="text" class="form-control" ng-disabled="{{readOnly}}" name="trubLoss" placeholder="lbs" ng-model="equipmentCreate.trubLoss" required>
-                <p ng-show="equipmentCreate.$invalid && !equipmentCreate.trubLoss.$pristine" class="help-block">Beer Type is required</p>
+                <input type="number" class="form-control" ng-disabled="{{readOnly}}" name="trubLoss" placeholder="lbs" ng-model="equipment.profile.trubLoss" required>
+                <p ng-show="equipment.profile.$invalid && !equipment.profile.trubLoss.$pristine" class="help-block">Beer Type is required</p>
             </div>
             <label class="col-md-2 control-label">Equipment Loss</label>
             <div class="col-md-4">
-                <input type="text" class="form-control" ng-disabled="{{readOnly}}" name="equipmentLoss" placeholder="lbs" ng-model="equipmentCreate.equipmentLoss" required>
-                <p ng-show="equipmentCreate.$invalid && !equipmentCreate.equipmentLoss.$pristine" class="help-block">Equipment Loss is required</p>
+                <input type="number" class="form-control" ng-disabled="{{readOnly}}" name="equipmentLoss" placeholder="lbs" ng-model="equipment.profile.equipmentLoss" required>
+                <p ng-show="equipment.profile.$invalid && !equipment.profile.equipmentLoss.$pristine" class="help-block">Equipment Loss is required</p>
             </div>
             <label class="col-md-2 control-label">Fermenter Loss</label>
             <div class="col-md-4">
-                <input type="text" class="form-control" ng-disabled="{{readOnly}}" name="fermenterLoss" placeholder="lbs" ng-model="equipmentCreate.fermenterLoss" required>
-                <p ng-show="equipmentCreate.$invalid && !equipmentCreate.fermenterLoss.$pristine" class="help-block">Fermenter Loss is required</p>
+                <input type="number" class="form-control" ng-disabled="{{readOnly}}" name="fermenterLoss" placeholder="lbs" ng-model="equipment.profile.fermenterLoss" required>
+                <p ng-show="equipment.profile.$invalid && !equipment.profile.fermenterLoss.$pristine" class="help-block">Fermenter Loss is required</p>
             </div>
         </div>
     </div>
     <div class="col-md-12">
         <hr style="padding-bottom: 40px"/>
-        <button type="submit" ng-show="!readOnly" class="btn btn-success pull-right">Save Profile</button>
+        <button type="submit" ng-show="!readOnly" class="btn btn-success pull-right">Save equipment.profile</button>
     </div>
 </form>
 
