--- a/client/app/settings/settings.tmpl.html
+++ b/client/app/settings/settings.tmpl.html
@@ -1,5 +1,5 @@
 <ul>
     <li> <a ui-sref="settings.profile">Profile</a></li>
-    <li><a ui-sref="settings.equipment">Equipment</a></li>
+    <li><a ui-sref="settings.equipmentList">Equipment</a></li>
 </ul>
 <ui-view></ui-view>
