--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,8 @@
 <html ng-app="Brewday">
     <head>
         <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Brewday</title>
 
         <link rel="stylesheet" type="text/css" href="./css/styles.css">
